name:                semaphore
version:             0.1.0.0
synopsis:            Final project for distributed systems class at PMF, University of Zagreb
description:         Please see README.md
homepage:            https://github.com/githubuser/semaphore#readme
license:             MIT
license-file:        LICENSE
author:              Nikola Henezi, Gea Janković
maintainer:          nikola@henezi.com
copyright:           2016 Nikola Henezi, Gea Janković
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable control-center
  hs-source-dirs:      cc
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       amqp,
                       transformers,
                       bytestring,
                       semaphore,
                       mtl

executable semaphore
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       amqp,
                       transformers,
                       bytestring,
                       mtl

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       mtl
  default-language:    Haskell2010

